--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -1,4 +1,16 @@
 @media screen and (min-width: 651px) and (max-width: 1350px) {
+
+.header-navigation,.container
+{
+width: 1000px;
+min-width: 960px;
+max-width: 100%;
+padding: 0 10px;
+position: relative;
+margin: 0 auto;
+}
+
+
 .mobile-menu-icon{
 float:left;
 display:none;
@@ -6,49 +18,155 @@ display:none;
 
 .logo{
 float:left;
-margin-top:5px;
-color:red;
+width:15%;
+margin-right:5%;
 }
 
-.large-nav{
-float:right;
+.logo-link{
+margin-top:7px;
+width:139px;
+height:40px;
 }
 
-.large-nav ul {
+.desktop-nav{
+width:80%;
+float:left;
 }
 
-.large-nav ul li {
-display:inline;
-list-style-type:none;
+.nav-ul{
+width:68%;
+height:50px;
+float:left;
+}
+
+.nav-li {
+width: 80px;
+margin-right:20px;
+padding: 0;
+list-style: none;
+float: left;
+cursor: pointer;
+
+}
+
+.nav-li a{
+font-family:"jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+letter-spacing: -0.02em;
+font-weight: 400;
+font-style: normal;
+white-space: nowrap;
+line-height: 55px;
+display: block;
+text-align: center;
+text-decoration: none;
+color:#f26522;
+font-size:18px;
+margin-right:40px;
+}
+
+.nav-li a:hover{
+color:#e69771;
+}
+
+.account{
+width:32%;
+float:left;
+font-family:"jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+letter-spacing: -0.02em;
+font-weight: 400;
+font-style: normal;
+white-space: nowrap;
+line-height: 50px;
+color:#f26522;
 }
 
 
-.large-nav ul li a {
-text-decoration:none;
-padding:10px;
+.accountPhoto{
+width:36px;
+height:50px;
+margin-right:10px;
+float:left;
 }
 
-.content-wrapper{
-width:100%;
-height:auto;
-width: 1000px;
-min-width: 980px;
-max-width: 1100px;
-padding: 0 10px;
+.circlePhoto{
+border: 1px solid #FFF;
+box-shadow: 0 1px 2px rgba(0,0,0,0.4);
+background-size:35px 35px;
+margin-top:6px;
+height:35px;
+width:35px;
+border-radius:100%;
+overflow:hidden;
+}
+
+.accountMenu{
 position: relative;
-margin: 0 auto;
+margin: 0;
+padding: 0;
+z-index: 30;
 }
+
+.accountMenu li{
+margin: 0;
+padding: 0;
+list-style: none;
+float: left;
+height: 48px;
+cursor: pointer;
+}
+
+.accountMenu li a {
+display: block;
+margin: 0 1px 0 0;
+text-align: center;
+text-decoration: none;
+}
+
+
+.accountMenu div{
+width:180px;
+visibility: hidden;
+margin: 0;
+padding: 0;
+border-bottom: 1px solid #d1d1d4;
+border-right: 1px solid #d1d1d4;
+border-left: 1px solid #d1d1d4;
+box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-moz-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-webkit-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+float:right;
+margin-top:1px;
+}
+
+.accountMenu div a{
+display: block;
+margin: 0;
+padding: 0px 10px;
+width: auto;
+white-space: nowrap;
+text-align: left;
+text-decoration: none;
+background: white;
+color: grey;
+height:40px;
+line-height:40px;
+border-bottom: 1px solid #f4f4f4;
+}
+
+.accountMenu div a:hover{
+color: #f25622;
+transition: color 0.8s ease;
+}	
 
 .newlist{
 position:absolute;
 width:100%;
 height:auto;
-margin-top:60px;
 }
 
 .newleftList{
 background-color:white;
-margin:10px auto;
+margin:0px auto;
 width:35%;
 height:100%;
 float:left;
@@ -107,8 +225,6 @@ padding-top:3px;
 width:100%;
 height:40px;
 text-align:center;
-border-bottom:1px solid #e5e5e5;
-
 padding-top:5px;
 }
 
@@ -158,8 +274,7 @@ font-family:helvetica world;
 }
 
 .bio{
-padding-top:15px;
-padding-bottom:15px;
+padding:19px;
 width:100%;
 height:auto;
 text-align:center;
@@ -173,7 +288,7 @@ line-height:18px;
 .additionalInfo{
 width:100%;
 height:auto;
-padding-bottom:10px;
+padding:19px;
 }
 
 .additionalInfoTitle{
@@ -307,7 +422,6 @@ margin-top:18%;
 .writeAReviewDiv{
 width:90%;
 float:left;
-
 }
 
 .reviewTextarea{
@@ -316,16 +430,12 @@ margin-top:2%;
 margin-left:4%;
 }
 
-.readReviews ul{
-width:100%;
-height:auto;
-}
-
-.readReviews ul li {
-width:100%;
-height:auto;
-border-top:1px solid #e5e5e5;
-min-height:100px;
+.readReviews{
+background-color:white;
+border-radius: 3px;
+box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-moz-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-webkit-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
 }
 
 .commenterPic{
@@ -402,6 +512,605 @@ cursor:pointer;
 .deleteComment:hover{
 color:grey;
 }
+
+.mob-nav-menu{
+display:none;
+}
+
+.profileViewsReviews{
+width:100%;
+height:30px;
+float:left;
+border-bottom:1px solid #e5e5e5;
+margin-bottom:15px;
+}
+
+.profilePictoViewsReviews{
+width:30%;
+float:left;
+display:block;
+margin:0px auto;
+text-align:right;
+}
+
+.profilePictoViewsReviews2{
+width:15%;
+float:left;
+display:block;
+margin:0px auto;
+text-align:right;
+}
+
+.profileNumViewsReviews{
+width:20%;
+float:left;
+font-family:helvetica world;
+color:#858585;
+font-size:16px;
+padding-left:7px;
+padding-top:1px;
+}
+
+.userRatings{
+margin-top:25px;
+width:100%;
+min-height:250px;
+height:auto;
+background-color:white;
+border-radius: 3px;
+box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-moz-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-webkit-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+}
+
+.userRatingsTitle{
+height:40px;
+padding:20px;
+text-align:left;
+color:grey;
+font-family:helvetica world;
+font-size:17px;
+}
+
+.userReviewsTitle{
+height:20px;
+padding:18px;
+text-align:left;
+color:grey;
+font-family:helvetica world;
+font-size:17px;
+border-top:1px solid #e5e5e5;
+}
+
+.userRatingsBody{
+width:95%;
+margin-top:15px;
+height:150px;
+margin:20px auto;
+}
+
+.rateN{
+width:100%;
+height:20px;
+margin-bottom:5px;
+}
+
+.rate-pic{
+width:80px;
+float:left;
+margin-right:10px;
+}
+
+.rate-meter{
+height:100%;
+width:55%;
+float:left;
+margin-right:10px;
+}
+
+.rate-num{
+height:100%;
+width:10%;
+line-height:20px;
+text-align:center;
+float:right;
+font-size:16px;
+color:grey;
+}
+
+.rank-and-review{
+display:none;
+}
+
+.readReviews ul{
+width:100%;
+height:auto;
+}
+
+.readReviews ul li:first-child {
+border-top:0px solid #e5e5e5;
+}
+
+.readReviews ul li {
+width:100%;
+height:auto;
+min-height:90px;
+border-bottom:1px solid #e5e5e5;
+padding-bottom:10px;
+}
+
+
+
+.readReviews ul li:last-child {
+text-align:center;
+color:grey;
+padding:10px;
+text-decoration:underline;
+line-height:60px;
+}
+
+.commenterPic{
+width:15%;
+height:100pcx;
+float:left;
+}
+
+.commenterPicSpecs{
+border: 2px solid #FFF;
+box-shadow: 0 1px 2px rgba(0,0,0,0.4);
+background-size:60px 60px;
+margin-top:12px;
+height:55px;
+width:55px;
+border-radius:100%;
+overflow:hidden;
+margin:15px auto;
+display:block;
+}
+
+.commentInfo{
+width:83%;
+height:35px;
+float:left;
+margin-bottom:4px;
+}
+
+.commentInfoName{
+width:68%;
+height:100%;
+float:left;
+line-height:45px;
+font-weight:bold;
+font-family:helvetica world;
+font-size:16px;
+}
+
+.commentInfoDate{
+width:26%;
+height:100%;
+float:left;
+text-align:right;
+padding-right:2%;
+line-height:45px;
+font-family:helvetica world;
+font-size:15px;
+color:#c0bebe;
+}
+
+.commentText{
+width:83%;
+margin-top:10px;
+padding-bottom:10px;
+height:auto;
+margin-left:15%;
+font-family:helvetica world;
+font-size:15px;
+color:grey;
+line-height:20px;
+padding-right:5%;
+}
+
+
+.deleteComment{
+float:left;
+padding-left:0.5%;
+width:4%;
+height:100%;
+line-height:40px;
+font-family:helvetica world;
+font-size:17px;
+color:#c0bebe;
+cursor:pointer;
+}
+
+.deleteComment:hover{
+color:grey;
+}
+
+.galleryUl{
+width:100%;
+}
+
+.galleryLi{
+width:17%;
+width:105px;
+height:105px;
+float:left;
+margin:0px auto;
+display:block:
+}
+
+.galleryLiImg{
+height:105px;
+width:105px;
+overflow:hidden;
+display:block;
+cursor:pointer;
+padding:2px;
+}
+
+.profilePhotosLargeBOTTOMContainer{
+margin-top:30px;
+margin-bottom:30px;
+width:100%;
+height:auto;
+float:left;
+background-color:white;
+border-radius: 3px;
+box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-moz-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-webkit-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+}
+
+.writeAReview{
+width:100%;
+min-height:140px;
+}
+
+.writeUser{
+float:left;
+width:10%;
+margin-top:10px;
+}
+
+.writerPicSpecs{
+border: 2px solid #FFF;
+box-shadow: 0 1px 2px rgba(0,0,0,0.4);
+background-size:60px 60px;
+margin-top:12px;
+height:35px;
+width:35px;
+border-radius:100%;
+overflow:hidden;
+margin-left:30%;
+margin-top:18%;
+}
+
+.writeAReviewDiv{
+width:90%;
+float:left;
+margin-top:10px;
+}
+
+.reviewTextarea{
+width:93%;
+height:auto;
+min-height:70px;
+margin-top:10px;
+margin-left:4%;
+outline:none;
+overflow:hidden;
+padding:5px;
+border:1px solid #e5e5e5;
+border-radius:3px;
+font-size:15px;
+font-family:helvetica world;
+line-height:15px;
+color:grey;
+}
+
+.postBtn{
+width:80px;
+height:25px;
+line-height:24px;
+border-radius:3px;
+border:1px solid grey;
+text-align:center;
+float:right;
+cursor:pointer;
+margin-top:10px;
+margin-bottom:10px;
+margin-right:3%;
+font-size:15px;
+}
+
+.postBtn:hover{
+background-color:#efefef;
+transition: background 0.4s ease;
+border:2px solid grey;
+}
+
+.postBtn:active{
+background-color:#efefef;
+transition: background 0.4s ease;
+}
+
+.mobile-menu{
+display:none;
+}
+
+.desktop-menu{
+width:27%;
+height:auto;
+float:left;
+background-color:white;
+border-radius: 3px;
+box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-moz-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-webkit-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+margin-right:25px;
+}
+
+.leftListHeader{
+height:50px;
+border-bottom:1px solid #e5e5e5;
+color:#f26522;
+}
+
+.leftListHeaderTitle{
+
+font-family:helvetica world;
+padding:15px 0px 0px 15px;
+font-size:20px;
+}
+
+
+.sportList{
+height:auto;
+}
+
+.sportList li{
+height:60px0px;
+line-height:60px;
+color:#808080;
+padding-left:30%;
+font-family:Helvetica World;
+}
+
+
+.trainerPicto{
+background-image: url("coach.png");
+background-repeat: no-repeat;
+background-position:12% 55%;
+}
+
+.trainerPicto:hover{
+color:#f26522;
+background-color:#fff2ee;
+cursor:pointer;
+border-right:3px solid #f26522;
+background-image: url("coach2.png");
+transition: background 0.4s ease;
+}
+
+.locationPicto{
+background-image: url("map.png");
+background-repeat: no-repeat;
+background-position:12% 55%;
+}
+
+.locationPicto:hover{
+color:#f26522;
+background-color:#fff2ee;
+cursor:pointer;
+border-right:3px solid #f26522;
+background-image: url("map2.png");
+transition: background 0.4s ease;
+}
+
+.storesPicto{
+background-image: url("cart.png");
+background-repeat: no-repeat;
+background-position:12% 52%;
+}
+
+.storesPicto:hover{
+transition: background 0.4s ease;
+color:#f26522;
+background-color:#fff2ee;
+cursor:pointer;
+border-right:3px solid #f26522;
+background-image: url("cart2.png");
+}
+
+.eventPicto{
+background-image: url("event.png");
+background-repeat: no-repeat;
+background-position:12% 52%;
+}
+
+.eventPicto:hover{
+color:#f26522;
+background-color:#fff2ee;
+cursor:pointer;
+border-right:3px solid #f26522;
+background-image: url("event2.png");
+transition: background 0.4s ease;
+}
+
+.list-accounts{
+float:left;
+width:70%;
+height:auto;
+margin:0px auto;
+background-color:white;
+border-radius: 3px;
+box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-moz-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-webkit-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+}
+
+.attributeList li{
+height:100px;
+border-bottom:1px solid #e5e5e5;
+cursor:pointer;
+}
+
+
+.listPic{
+width:25%;
+height:100%;
+float:left;
+}
+
+.circleListPic{
+border: 2px solid #FFF;
+box-shadow: 0 1px 2px rgba(0,0,0,0.4);
+background-size:35px 35px;
+margin:12px auto;
+height:70px;
+width:70px;
+border-radius:100%;
+overflow:hidden;
+display:block;
+}
+
+.listInfo{
+width:62%;
+height:100%;
+float:left;
+
+}
+
+.listName{
+width:100%;
+height:30px;
+line-height:45px;
+margin-bottom:6px;
+padding-left:5px;
+font-size:17px;
+font-family:Helvetica World;
+color:#f26522;
+}
+
+.listviews{
+width:26%;
+height:25px;
+float:left;
+line-height:22px;
+color:#808080;
+padding-top:1px;
+}
+
+.listViewsPicto{
+float:left;
+margin-left:5%;
+}
+
+.listReviews{
+width:26%;
+height:25px;
+float:left;
+line-height:22px;
+color:#808080;
+padding-top:1px;
+}
+
+.listRank{
+width:100%;
+height:25px;
+float:left;
+margin-left:2px;
+}
+
+.listArrow{
+width:10%;
+height:100%;
+float:left;
+}
+
+.listArrowPicto{
+margin:32px auto;
+display:block;
+}
+
+.list-sort{
+display:none;
+}
+
+.footer-wrapper{
+float:left;
+width:100%;
+height:auto;
+display:block;
+
+}
+
+.footer-container{
+width:75%;
+height:100px;
+display:block;
+margin:1px auto;
+
+}
+
+.sponsor-container{
+width:100%;
+height:50px;
+}
+
+.copyrights{
+width:58%;
+height:20px;
+text-align:right;
+line-height:20px;
+padding:2px;
+font-size:15px;
+color:grey;
+float:left;
+}
+
+.site-map{
+width:42%;
+height:30px;
+float:left;
+text-align:center;
+
+}
+
+.site-map ul{
+padding-top:5px;
+text-align:center;
+list-style-type:none;
+margin:0px auto;
+display:block;
+}
+
+.site-map ul li{
+float:left;	
+display:inline;
+padding-right:8px;
+padding-left:8px;
+border-right:1px solid grey;
+}
+
+.site-map ul li:last-child{
+border-right:0px solid grey;
+}
+
+.site-map ul li a{
+font-size:15px;
+color:#f26522;
+width:80px;
+height:20px;
+text-decoration:none;
+text-align:center;
+}
+
+.site-map ul li a:hover{
+text-decoration:underline;
+}
+	
 
 
 
