--- a/app/webroot/css/mobileskeleton.css
+++ b/app/webroot/css/mobileskeleton.css
@@ -1,5 +1,9 @@
 @media screen and (max-width: 650px) {
 
+.desktop-nav{
+display:none;
+}
+
 .mobile-menu-icon{
 float:left;
 display:block;
@@ -648,61 +652,8 @@ box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
 -webkit-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
 }
 
-.footer-container{
-width:100%;
-height:100px;
-}
 
-.sponsor-container{
-width:100%;
-height:50px;
-}
-
-.copyrights{
-width:100%;
-height:20px;
-text-align:center;
-padding:2px;
-font-size:15px;
-color:grey;
-}
-
-.site-map{
-width:100%;
-height:30px;
-}
-
-.site-map ul{
-padding-top:5px;
-text-align:center;
-list-style-type:none;
-}
-
-.site-map ul li{
-display:inline;
-padding-right:8px;
-padding-left:8px;
-border-right:1px solid grey;
-}
-
-.site-map ul li:last-child{
-border-right:0px solid grey;
-}
-
-.site-map ul li a{
-font-size:15px;
-color:#f26522;
-width:80px;
-height:20px;
-text-decoration:none;
-text-align:center;
-}
-
-.site-map ul li a:hover{
-text-decoration:underline;
-}
-
-.list-head{
+.mobile-menu{
 width:100%;
 height:200px;
 background-image: url("gym.jpg");
@@ -710,7 +661,6 @@ vertical-align: middle;
 background-size: 100%;
 background-position: 50% 50%;
 background-repeat: no-repeat;
-
 }
 
 .search-list-head{
@@ -830,7 +780,7 @@ cursor:pointer;
 
 
 .listPic{
-width:22%;
+width:25%;
 height:100%;
 float:left;
 }
@@ -848,7 +798,7 @@ display:block;
 }
 
 .listInfo{
-width:65%;
+width:62%;
 height:100%;
 float:left;
 
@@ -1050,7 +1000,70 @@ font-family:helvetica world;
 float:left;
 }
 
+.desktop-menu{
+display:none;
+}
 
+.footer-wrapper{
+float:left;
+width:100%;
+height:auto;
+bottom:0;
+}
+
+.footer-container{
+width:100%;
+height:100px;
+}
+
+.sponsor-container{
+width:100%;
+height:50px;
+}
+
+.copyrights{
+width:100%;
+height:20px;
+text-align:center;
+padding:2px;
+font-size:15px;
+color:grey;
+}
+
+.site-map{
+width:100%;
+height:30px;
+}
+
+.site-map ul{
+padding-top:5px;
+text-align:center;
+list-style-type:none;
+}
+
+.site-map ul li{
+display:inline;
+padding-right:8px;
+padding-left:8px;
+border-right:1px solid grey;
+}
+
+.site-map ul li:last-child{
+border-right:0px solid grey;
+}
+
+.site-map ul li a{
+font-size:15px;
+color:#f26522;
+width:80px;
+height:20px;
+text-decoration:none;
+text-align:center;
+}
+
+.site-map ul li a:hover{
+text-decoration:underline;
+}
 
 
 
