--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 651px) and (max-width: 1350px) {
+@media screen and (min-width: 651px) {
 
 .header-navigation,.container
 {
