--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -1111,6 +1111,502 @@ text-align:center;
 text-decoration:underline;
 }
 	
+.signup-big{
+width:100%;
+height:650px;
+background-color:white;
+border-radius: 3px;
+box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-moz-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+-webkit-box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
+}
+	
+.signup-header{
+width:100%;
+height:60px;
+border-bottom:1px solid #efefef;
+}
+	
+.signup-header-ai{
+width:33.333%;
+height:100%;
+float:left;
+color:grey;
+background-size:37px 37px;
+background-image: url("signup1G.png");
+background-repeat:no-repeat;
+background-position: 20px 12px; 
+text-align:center;
+line-height:60px;
+font-size:17px;
+font-family:helvetica world;
+cursor:pointer;
+}	
+
+.signup-header-ai:hover{
+background-image: url("signup1O.png");
+border-bottom:3px solid #f25622;
+color:#f25622;
+transition: border 0.2s ease;
+cursor:pointer;
+}
+	
+.signup-header-bi{
+width:33.333%;
+height:100%;
+float:left;
+color:grey;
+background-size:37px 37px;
+background-image: url("signup2G.png");
+background-repeat:no-repeat;
+background-position: 20px 12px; 
+text-align:center;
+line-height:60px;
+font-size:17px;
+font-family:helvetica world;
+cursor:pointer;
+}	
+
+.signup-header-bi:hover{
+background-image: url("signup2O.png");
+border-bottom:3px solid #f25622;
+color:#f25622;
+transition: border 0.2s ease;
+cursor:pointer;
+}
+	
+.signup-header-ph{
+width:33.333%;
+height:100%;
+float:left;
+color:grey;
+background-size:37px 37px;
+background-image: url("signup3G.png");
+background-repeat:no-repeat;
+background-position: 20px 12px;  
+text-align:center;
+line-height:60px;
+font-size:17px;
+font-family:helvetica world;
+cursor:pointer;
+}
+
+.signup-header-ph:hover{
+background-image: url("signup3O.png");
+border-bottom:3px solid #f25622;
+color:#f25622;
+transition: border 0.2s ease;
+cursor:pointer;
+}
+
+.signup1{
+height:150px;
+width:100%;
+border-bottom:1px solid #efefef;
+
+}
+
+.signup2{
+height:310px;
+width:100%;
+
+}
+
+.signup3{
+height:auto;
+width:100%;	
+display:none;
+}
+
+.signup-title{
+width:100%;
+height:70px;
+text-align:center;
+padding:20px;
+color:grey;
+font-family:helvetica world;
+font-size:19px;
+}
+
+.signup-title2{
+width:100%;
+height:40px;
+text-align:center;
+padding:20px;
+color:grey;
+font-family:helvetica world;
+font-size:19px;
+}
+
+.signup-Desc{
+width:100%;
+height:30px;
+line-height:35px;
+text-align:center;
+color:grey;
+font-family:helvetica world;
+font-size:15px;
+margin-bottom:20px;
+}
+
+	
+.signup-social{
+width:100%;
+height:60px;
+padding-left:24%;
+}	
+
+.signup-fb{
+width:250px;
+height:45px;
+border-radius:5px;
+background-color:#3a5ba2;
+float:left;
+margin-right:25px;
+color:white;
+cursor:pointer;
+background-size:37px 37px;
+background-image: url("scconnect1.png");
+background-repeat:no-repeat;
+background-position: 15px 4px;  
+padding-left:55px;
+line-height:50px;
+}
+
+.signup-twitter{
+width:250px;
+height:45px;
+border-radius:5px;
+background-color:#1ebef0;
+float:left;
+color:white;
+cursor:pointer;
+background-image: url("scconnect2.png");
+background-repeat:no-repeat;
+background-size:37px 37px;
+background-position: 15px 4px; 
+padding-left:60px;
+line-height:50px; 
+}
+
+.signup-email{
+width:35%;
+height:240px;
+display:block;
+margin:0px auto;
+}
+
+.textboxStandard{
+width:100%;
+height:40px;
+margin-bottom:10px;
+background-color:#f4f4f4;
+border:1px solid #f4f4f4;
+color:grey;
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:15px;
+}
+
+.textboxStandard:hover{
+background-color:#e8e6e6;
+}
+
+
+.signupSubmitBTN{
+width:100%;
+height:40px;
+margin-top:15px;
+margin-bottom:10px;
+background-color:#f25622;
+color:white;
+text-align:center;
+line-height:30px;
+border-radius:5px;
+border:1px solid #f25622;
+cursor:pointer;
+font-family:helvetica world;
+font-size:16px;
+outline:none;
+}
+
+.signup-basic{
+width:80%;
+height:400px;
+display:block;
+margin:0px auto;
+}
+
+.textboxStandardLeft{
+width:48%;
+margin-right:3%;
+height:40px;
+margin-bottom:20px;
+border:1px solid #d5d5d5;
+color:grey;
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:15px;
+}
+
+.textboxStandardRight{
+width:48%;
+height:40px;
+margin-bottom:20px;
+border:1px solid #d5d5d5;
+color:grey;	
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:15px;
+}
+
+.select-country{
+width:35%;
+height:40px;
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+border-radius:5px;
+border:1px solid #d5d5d5;
+color:grey;
+padding:0;
+margin-bottom:20px;
+}
+
+.select-city{
+width:31%;
+height:40px;
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+margin-left:1%;
+margin-right:1%;
+border-radius:5px;
+border:1px solid #d5d5d5;
+color:grey;
+margin-bottom:20px;
+}
+
+.select-district{
+width:30%;
+height:40px;
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+border-radius:5px;
+border:1px solid #d5d5d5;
+color:grey;
+margin-bottom:20px;
+}
+
+.leftSignUpMini{
+width:48%;
+height:auto;
+margin-right:4%;
+float:left;
+}
+
+.fbtextboxLeftSignUpMini{
+width:100%;
+height:40px;
+margin-bottom:20px;
+border:1px solid #d5d5d5;
+color:grey;	
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:15px;
+padding-left:50px;
+background-image: url("facebook.png");
+background-repeat:no-repeat;
+background-size:27px 27px;
+background-position: 10px 6px; 
+}
+
+.TtextboxLeftSignUpMini{
+width:100%;
+height:40px;
+margin-bottom:20px;
+border:1px solid #d5d5d5;
+color:grey;	
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:15px;
+padding-left:50px;
+background-image: url("twitterconnect.png");
+background-repeat:no-repeat;
+background-size:27px 27px;
+background-position: 10px 6px; 
+}
+
+.ItextboxLeftSignUpMini{
+width:100%;
+height:40px;
+margin-bottom:20px;
+border:1px solid #d5d5d5;
+color:grey;	
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:15px;
+padding-left:50px;
+background-image: url("instagram.png");
+background-repeat:no-repeat;
+background-size:27px 27px;
+background-position: 10px 6px; 
+}
+
+.LtextboxLeftSignUpMini{
+width:100%;
+height:40px;
+margin-bottom:20px;
+border:1px solid #d5d5d5;
+color:grey;	
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:15px;
+padding-left:50px;
+background-image: url("linkedin.png");
+background-repeat:no-repeat;
+background-size:27px 27px;
+background-position: 10px 6px; 
+}
+
+.rightSignUpMini{
+width:48%;
+height:auto;
+float:left;
+}
+
+.select-sport{
+width:100%;
+height:40px;
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+border-radius:5px;
+border:1px solid #d5d5d5;
+color:grey;
+margin-bottom:20px;
+}
+
+
+.textareaSignUp{
+width:100%;
+height:280px;
+border:1px solid #d5d5d5;
+color:grey;	
+outline:none;
+font-family:helvetica world;
+font-size:16px;
+padding:10px;
+}
+
+
+.signup-header-ai2{
+width:25%;
+height:100%;
+float:left;
+color:grey;
+background-size:37px 37px;
+background-image: url("signup1G.png");
+background-repeat:no-repeat;
+background-position: 20px 12px; 
+text-align:center;
+line-height:60px;
+font-size:17px;
+font-family:helvetica world;
+cursor:pointer;
+padding-left:50px;
+}	
+
+.signup-header-ai2:hover{
+background-image: url("signup1O.png");
+border-bottom:3px solid #f25622;
+color:#f25622;
+transition: border 0.2s ease;
+cursor:pointer;
+}
+	
+.signup-header-bi2{
+width:25%;
+height:100%;
+float:left;
+color:grey;
+background-size:37px 37px;
+background-image: url("signup2G.png");
+background-repeat:no-repeat;
+background-position: 20px 12px; 
+text-align:center;
+line-height:60px;
+font-size:17px;
+font-family:helvetica world;
+cursor:pointer;
+padding-left:50px;
+}	
+
+.signup-header-bi2:hover{
+background-image: url("signup2O.png");
+border-bottom:3px solid #f25622;
+color:#f25622;
+transition: border 0.2s ease;
+cursor:pointer;
+}
+	
+.signup-header-ph2{
+width:25%;
+height:100%;
+float:left;
+color:grey;
+background-size:37px 37px;
+background-image: url("signup3G.png");
+background-repeat:no-repeat;
+background-position: 20px 12px;  
+text-align:center;
+line-height:60px;
+font-size:17px;
+font-family:helvetica world;
+cursor:pointer;
+padding-left:50px;
+}
+
+.signup-header-ph2:hover{
+background-image: url("signup3O.png");
+border-bottom:3px solid #f25622;
+color:#f25622;
+transition: border 0.2s ease;
+cursor:pointer;
+}
+
+.signup-header-ep2{
+width:25%;
+height:100%;
+float:left;
+color:grey;
+background-size:37px 37px;
+background-image: url("signup4G.png");
+background-repeat:no-repeat;
+background-position: 20px 12px;  
+text-align:center;
+line-height:60px;
+font-size:17px;
+font-family:helvetica world;
+cursor:pointer;
+padding-left:50px;
+}
+
+.signup-header-ep2:hover{
+background-image: url("signup4O.png");
+border-bottom:3px solid #f25622;
+color:#f25622;
+transition: border 0.2s ease;
+cursor:pointer;
+}
 
 
 
