--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -159,7 +159,6 @@ transition: color 0.8s ease;
 }	
 
 .newlist{
-position:absolute;
 width:100%;
 height:auto;
 }
@@ -1042,16 +1041,14 @@ display:none;
 float:left;
 width:100%;
 height:auto;
-display:block;
-
+bottom:0;
 }
 
 .footer-container{
 width:75%;
-height:100px;
+height:70px;
 display:block;
-margin:1px auto;
-
+margin:0px auto;
 }
 
 .sponsor-container{
@@ -1061,13 +1058,14 @@ height:50px;
 
 .copyrights{
 width:58%;
-height:20px;
+height:30px;
 text-align:right;
 line-height:20px;
-padding:2px;
+padding:1px;
 font-size:15px;
 color:grey;
 float:left;
+
 }
 
 .site-map{
@@ -1075,16 +1073,16 @@ width:42%;
 height:30px;
 float:left;
 text-align:center;
-
 }
 
 .site-map ul{
-padding-top:5px;
+padding-top:3px;
 text-align:center;
 list-style-type:none;
 margin:0px auto;
 display:block;
 }
+
 
 .site-map ul li{
 float:left;	
