--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -68,7 +68,127 @@ margin-right:40px;
 color:#e69771;
 }
 
+.signUpBtn{
+width:80px;
+height:33px;
+float:right;
+text-align:center;
+padding-top:3px;
+border:2px solid #f26522;
+border-radius:5px;
+color:#f26522;
+font-family:helvetica world;
+font-size:15px;
+margin-top:7px;
+cursor:pointer;
+background-color:white;
+outline:none;
+}
+
+.signUpBtn:hover{
+background-color:#f26522;
+opacity:0.6;
+transition: background 0.8s ease;
+color:white;
+}
+
+.signupDiv{
+width:500px;
+height:600px;
+background-color:white;
+border-radius:5px;
+}
+
+.signupDivTitle{
+width:100%;
+height:70px;
+text-align:center;
+font-family:helvetica world;
+font-size:20px;
+padding-top:20px;
+color:grey;
+}
+
+
+.signupMidDiv ul{
+width:90%;
+margin:0px auto;
+display:inline;
+height:276px;
+background-color:green;
+}
+
+.signupMidDiv ul li{
+width:50%;
+float:left;
+height:230px;
+
+}
+
+.signupMidDiv ul li a{
+text-decoration:none;
+}
+
+.signupMidDiv ul li a:hover{
+text-decoration:underline;
+color:grey;
+}
+
+
+.signupMidDiv ul li img{
+margin:0px auto;
+display:block;
+}
+
+.signupPictoText{
+width:100%;
+text-align:center;
+font-family:helvetica world;
+font-size:19px;
+color:grey;
+height:44px;
+text-decoration:none;
+padding:15px;
+}
+
+.signupPictoDesc{
+width:80%;
+margin:0px auto;
+display:block;
+height:60px;
+text-align:center;
+font-family:helvetica world;
+font-size:14px;
+color:grey;
+}
+
+.signIn{
+width:85%;
+margin:0px auto;
+display:block;
+height:50px;
+text-align:center;
+font-family:helvetica world;
+font-size:16px;
+color:grey;
+padding-top:15px;
+border-top:1px solid grey;
+cursor:pointer;
+}
+
+.signIn:hover{
+color:black;
+}
+
+.signupMidDiv{
+height:470px;
+}
+
+
+
+
 .account{
+display:none;
 width:32%;
 float:left;
 font-family:"jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
