--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -550,6 +550,7 @@ margin-left:4%;
 }
 
 .readReviews{
+margin-top:25px;
 background-color:white;
 border-radius: 3px;
 box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
