--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -68,28 +68,39 @@ margin-right:40px;
 color:#e69771;
 }
 
-.signUpBtn{
+.popup{
 width:80px;
 height:33px;
 float:right;
 text-align:center;
-padding-top:3px;
+padding:3px;
 border:2px solid #f26522;
 border-radius:5px;
-color:#f26522;
-font-family:helvetica world;
-font-size:15px;
-margin-top:7px;
+margin-top:8px;
 cursor:pointer;
 background-color:white;
 outline:none;
+z-index:1000;
 }
 
-.signUpBtn:hover{
-background-color:#f26522;
-opacity:0.6;
+.popup:hover{
+background-color:#fde0d2;
 transition: background 0.8s ease;
-color:white;
+}
+
+.popup a{
+line-height:25px;
+text-decoration:none;
+color:#f26522;
+font-family:helvetica world;
+font-size:13px;
+font-weight:bold;
+}
+
+.popup a:hover{
+text-decoration:none;
+color:#f26522;
+font-family:helvetica world;
 }
 
 .signupDiv{
