--- a/app/webroot/css/mobileskeleton.css
+++ b/app/webroot/css/mobileskeleton.css
@@ -656,7 +656,7 @@ box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
 .mobile-menu{
 width:100%;
 height:200px;
-background-image: url("gym.jpg");
+background-image: url("../img/gym.jpg");
 vertical-align: middle;
 background-size: 100%;
 background-position: 50% 50%;
@@ -685,7 +685,7 @@ font-size:15px;
 font-family:helvetica world;
 padding-left:35px;
 outline:none;
-background: url(search.png) left no-repeat;
+background: url("../img/search.png") left no-repeat;
 }
 
 .text-list-head{
