--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -112,12 +112,14 @@ border-radius:5px;
 
 .signupDivTitle{
 width:100%;
-height:70px;
+height:50px;
+margin-bottom:20px;
 text-align:center;
 font-family:helvetica world;
 font-size:20px;
 padding-top:20px;
 color:grey;
+border-bottom:1px solid #efefef;
 }
 
 
@@ -174,7 +176,7 @@ color:grey;
 }
 
 .signIn{
-width:85%;
+width:100%;
 margin:0px auto;
 display:block;
 height:50px;
@@ -182,8 +184,8 @@ text-align:center;
 font-family:helvetica world;
 font-size:16px;
 color:grey;
-padding-top:15px;
-border-top:1px solid grey;
+padding-top:20px;
+border-top:1px solid #efefef;
 cursor:pointer;
 }
 
@@ -941,29 +943,33 @@ color:grey;
 }
 
 .postBtn{
-width:80px;
-height:25px;
-line-height:24px;
-border-radius:3px;
-border:1px solid grey;
-text-align:center;
 float:right;
 cursor:pointer;
-margin-top:10px;
-margin-bottom:10px;
 margin-right:3%;
-font-size:15px;
+width:80px;
+height:33px;
+float:right;
+text-align:center;
+border:2px solid #f26522;
+border-radius:5px;
+cursor:pointer;
+background-color:white;
+outline:none;
+line-height:30px;
+text-decoration:none;
+color:#f26522;
+font-family:helvetica world;
+font-size:13px;
+font-weight:bold;
+margin-top:5px;
 }
 
 .postBtn:hover{
-background-color:#efefef;
-transition: background 0.4s ease;
-border:2px solid grey;
-}
-
-.postBtn:active{
-background-color:#efefef;
-transition: background 0.4s ease;
+text-decoration:none;
+color:#f26522;
+background-color:#fde0d2;
+font-family:helvetica world;
+transition: background 0.8s ease;
 }
 
 .mobile-menu{
@@ -1002,7 +1008,7 @@ height:auto;
 
 .sportList li{
 height:60px0px;
-line-height:60px;
+line-height:50px;
 color:#808080;
 padding-left:30%;
 font-family:Helvetica World;
@@ -1243,7 +1249,7 @@ text-decoration:underline;
 	
 .signup-big{
 width:100%;
-height:650px;
+height:540px;
 background-color:white;
 border-radius: 3px;
 box-shadow: 0px 0px 3px 0px rgba(119, 119, 119, 0.46);
@@ -1262,24 +1268,13 @@ width:33.333%;
 height:100%;
 float:left;
 color:grey;
-background-size:37px 37px;
-background-image: url("signup1G.png");
-background-repeat:no-repeat;
-background-position: 20px 12px; 
-text-align:center;
-line-height:60px;
-font-size:17px;
+text-align:left;
+line-height:62px;
+padding-left:20px;
+font-size:20px;
 font-family:helvetica world;
-cursor:pointer;
 }	
 
-.signup-header-ai:hover{
-background-image: url("signup1O.png");
-border-bottom:3px solid #f25622;
-color:#f25622;
-transition: border 0.2s ease;
-cursor:pointer;
-}
 	
 .signup-header-bi{
 width:33.333%;
@@ -1287,7 +1282,7 @@ height:100%;
 float:left;
 color:grey;
 background-size:37px 37px;
-background-image: url("signup2G.png");
+background-image: url("../img/signup2G.png");
 background-repeat:no-repeat;
 background-position: 20px 12px; 
 text-align:center;
@@ -1298,7 +1293,7 @@ cursor:pointer;
 }	
 
 .signup-header-bi:hover{
-background-image: url("signup2O.png");
+background-image: url("../img/signup2O.png");
 border-bottom:3px solid #f25622;
 color:#f25622;
 transition: border 0.2s ease;
@@ -1311,7 +1306,7 @@ height:100%;
 float:left;
 color:grey;
 background-size:37px 37px;
-background-image: url("signup3G.png");
+background-image: url("../img/signup3G.png");
 background-repeat:no-repeat;
 background-position: 20px 12px;  
 text-align:center;
@@ -1322,7 +1317,7 @@ cursor:pointer;
 }
 
 .signup-header-ph:hover{
-background-image: url("signup3O.png");
+background-image: url("../img/signup3O.png");
 border-bottom:3px solid #f25622;
 color:#f25622;
 transition: border 0.2s ease;
@@ -1396,7 +1391,7 @@ margin-right:25px;
 color:white;
 cursor:pointer;
 background-size:37px 37px;
-background-image: url("scconnect1.png");
+background-image: url("../img/scconnect1.png");
 background-repeat:no-repeat;
 background-position: 15px 4px;  
 padding-left:55px;
@@ -1411,7 +1406,7 @@ background-color:#1ebef0;
 float:left;
 color:white;
 cursor:pointer;
-background-image: url("scconnect2.png");
+background-image: url("../img/scconnect2.png");
 background-repeat:no-repeat;
 background-size:37px 37px;
 background-position: 15px 4px; 
@@ -1550,7 +1545,7 @@ font-family:helvetica world;
 font-size:16px;
 padding:15px;
 padding-left:50px;
-background-image: url("facebook.png");
+background-image: url("../img/facebook.png");
 background-repeat:no-repeat;
 background-size:27px 27px;
 background-position: 10px 6px; 
@@ -1567,7 +1562,7 @@ font-family:helvetica world;
 font-size:16px;
 padding:15px;
 padding-left:50px;
-background-image: url("twitterconnect.png");
+background-image: url("../img/twitterconnect.png");
 background-repeat:no-repeat;
 background-size:27px 27px;
 background-position: 10px 6px; 
@@ -1584,7 +1579,7 @@ font-family:helvetica world;
 font-size:16px;
 padding:15px;
 padding-left:50px;
-background-image: url("instagram.png");
+background-image: url("../img/instagram.png");
 background-repeat:no-repeat;
 background-size:27px 27px;
 background-position: 10px 6px; 
@@ -1601,7 +1596,7 @@ font-family:helvetica world;
 font-size:16px;
 padding:15px;
 padding-left:50px;
-background-image: url("linkedin.png");
+background-image: url("../img/linkedin.png");
 background-repeat:no-repeat;
 background-size:27px 27px;
 background-position: 10px 6px; 
@@ -1644,7 +1639,7 @@ height:100%;
 float:left;
 color:grey;
 background-size:37px 37px;
-background-image: url("signup1G.png");
+background-image: url("../img/signup1G.png");
 background-repeat:no-repeat;
 background-position: 20px 12px; 
 text-align:center;
@@ -1656,7 +1651,7 @@ padding-left:50px;
 }	
 
 .signup-header-ai2:hover{
-background-image: url("signup1O.png");
+background-image: url("../img/signup1O.png");
 border-bottom:3px solid #f25622;
 color:#f25622;
 transition: border 0.2s ease;
@@ -1669,7 +1664,7 @@ height:100%;
 float:left;
 color:grey;
 background-size:37px 37px;
-background-image: url("signup2G.png");
+background-image: url("../img/signup2G.png");
 background-repeat:no-repeat;
 background-position: 20px 12px; 
 text-align:center;
@@ -1681,7 +1676,7 @@ padding-left:50px;
 }	
 
 .signup-header-bi2:hover{
-background-image: url("signup2O.png");
+background-image: url("../img/signup2O.png");
 border-bottom:3px solid #f25622;
 color:#f25622;
 transition: border 0.2s ease;
@@ -1694,7 +1689,7 @@ height:100%;
 float:left;
 color:grey;
 background-size:37px 37px;
-background-image: url("signup3G.png");
+background-image: url("../img/signup3G.png");
 background-repeat:no-repeat;
 background-position: 20px 12px;  
 text-align:center;
@@ -1706,7 +1701,7 @@ padding-left:50px;
 }
 
 .signup-header-ph2:hover{
-background-image: url("signup3O.png");
+background-image: url("../img/signup3O.png");
 border-bottom:3px solid #f25622;
 color:#f25622;
 transition: border 0.2s ease;
@@ -1719,7 +1714,7 @@ height:100%;
 float:left;
 color:grey;
 background-size:37px 37px;
-background-image: url("signup4G.png");
+background-image: url("../img/signup4G.png");
 background-repeat:no-repeat;
 background-position: 20px 12px;  
 text-align:center;
@@ -1731,7 +1726,7 @@ padding-left:50px;
 }
 
 .signup-header-ep2:hover{
-background-image: url("signup4O.png");
+background-image: url("../img/signup4O.png");
 border-bottom:3px solid #f25622;
 color:#f25622;
 transition: border 0.2s ease;
