--- a/app/webroot/css/mobileskeleton.css
+++ b/app/webroot/css/mobileskeleton.css
@@ -1430,6 +1430,33 @@ font-size:17px;
 text-decoration:none;
 }
 
+.like-and-rate{
+width:100%;
+height:80px;
+border-top:1px solid #e5e5e5;
+}
+
+.like-and-rate-left{
+width:50%;
+height:100%;
+float:left;
+border-right:1px solid #e5e5e5;
+}
+
+.like-and-rate-right{
+width:50%;
+height:100%;
+float:left;
+}
+
+.like-and-rate-title{
+text-align:center;
+color:grey;
+font-size:16px;
+font-family:helvetica world;
+padding-top:10px;
+margin-bottom:5px;
+}
 
 
 
