arrow changed in select
changes to select,  default arrow replaced by new one

--- a/app/webroot/css/mobileskeleton.css
+++ b/app/webroot/css/mobileskeleton.css
@@ -1,5 +1,18 @@
 @media screen and (max-width: 650px) {
 
+body{
+overflow:none;
+}
+
+
+.content-wrapper{
+width:100%;
+height:auto;
+min-width:370px;
+padding-top:52px;
+min-height:610px;
+}
+
 .desktop-nav{
 display:none;
 }
