--- a/app/webroot/css/LargeSkeleton.css
+++ b/app/webroot/css/LargeSkeleton.css
@@ -10,6 +10,14 @@ position: relative;
 margin: 0 auto;
 }
 
+.content-wrapper{
+width:100%;
+height:auto;
+min-width:370px;
+padding-top:75px;
+min-height:610px;
+}
+
 
 .mobile-menu-icon{
 float:left;
@@ -1492,7 +1500,7 @@ float:right;
 
 .select-sport{
 width:100%;
-height:40px;
+height:35px;
 outline:none;
 font-family:helvetica world;
 font-size:16px;
@@ -1501,6 +1509,11 @@ border:1px solid #d5d5d5;
 color:grey;
 margin-top:20px;
 margin-bottom:20px;
+background: url("../img/new_arrow.png") no-repeat right;
+-webkit-appearance: none;
+-moz-appearance:none;
+-webkit-appearance:none;
+cursor:pointer;
 }
 
 
@@ -1556,7 +1569,7 @@ font-family:helvetica world;
 font-size:16px;
 padding:15px;
 padding-left:50px;
-background-image: url("facebook.png");
+background-image: url("../img/facebook.png");
 background-repeat:no-repeat;
 background-size:27px 27px;
 background-position: 10px 6px; 
@@ -1574,7 +1587,7 @@ font-family:helvetica world;
 font-size:16px;
 padding:15px;
 padding-left:50px;
-background-image: url("twitterconnect.png");
+background-image: url("../img/twitter.png");
 background-repeat:no-repeat;
 background-size:27px 27px;
 background-position: 10px 6px; 
@@ -1592,7 +1605,7 @@ font-family:helvetica world;
 font-size:16px;
 padding:15px;
 padding-left:50px;
-background-image: url("instagram.png");
+background-image: url("../img/instagram.png");
 background-repeat:no-repeat;
 background-size:27px 27px;
 background-position: 10px 6px; 
@@ -1610,7 +1623,7 @@ font-family:helvetica world;
 font-size:16px;
 padding:15px;
 padding-left:50px;
-background-image: url("linkedin.png");
+background-image: url("../img/linkedin.png");
 background-repeat:no-repeat;
 background-size:27px 27px;
 background-position: 10px 6px; 
@@ -1619,7 +1632,7 @@ padding-bottom:20px;
 
 .select-country{
 width:90%;
-height:40px;
+height:35px;
 outline:none;
 font-family:helvetica world;
 font-size:16px;
@@ -1629,11 +1642,16 @@ color:grey;
 padding:0;
 margin:20px auto;
 display:block;
+-webkit-appearance: none;
+-moz-appearance:none;
+-webkit-appearance:none;
+background: url("../img/new_arrow.png") no-repeat right;
+cursor:pointer;
 }
 
 .select-city{
 width:90%;
-height:40px;
+height:35px;
 outline:none;
 font-family:helvetica world;
 font-size:16px;
@@ -1644,6 +1662,11 @@ border:1px solid #d5d5d5;
 color:grey;
 margin:20px auto;
 display:block;
+-webkit-appearance: none;
+-moz-appearance:none;
+-webkit-appearance:none;
+background: url("../img/new_arrow.png") no-repeat right;
+cursor:pointer;
 }
 
 .select-district{
@@ -1915,7 +1938,7 @@ float:left;
 color:white;
 cursor:pointer;
 background-size:37px 37px;
-background-image: url("scconnect1.png");
+background-image: url("../img/scconnect1.png");
 background-repeat:no-repeat;
 background-position: 3px 2px;  
 padding-left:45px;
@@ -1930,7 +1953,7 @@ background-color:#1ebef0;
 float:left;
 color:white;
 cursor:pointer;
-background-image: url("scconnect2.png");
+background-image: url("../img/scconnect2.png");
 background-repeat:no-repeat;
 background-size:37px 37px;
 background-position: 3px 2px; 
@@ -1947,7 +1970,7 @@ background-color:#f25622;
 float:left;
 color:white;
 cursor:pointer;
-background-image: url("emailpicto.png");
+background-image: url("../img/emailpicto.png");
 background-repeat:no-repeat;
 background-size:37px 37px;
 background-position: 3px 2px; 
@@ -2055,6 +2078,10 @@ color:grey;
 margin:10px auto;
 display:block;
 cursor:pointer;
+-webkit-appearance: none;
+-moz-appearance:none;
+-webkit-appearance:none;
+background: url("../img/new_arrow.png") no-repeat right;
 }
 
 .save-article{
@@ -2099,6 +2126,13 @@ height:148px;
 margin-top:10px;
 }
 
+
+.menu-filter-in li select{
+-webkit-appearance: none;
+-moz-appearance:none;
+-webkit-appearance:none;
+}
+
 .menu-filter-in-li1{
 color:#f26522;
 padding-left:15px;
@@ -2117,6 +2151,7 @@ padding:0;
 margin:20px auto;
 display:block;
 cursor:pointer;
+background: url("../img/new_arrow.png") no-repeat right;
 }
 
 
