--- a/app/webroot/css/mobileskeleton.css
+++ b/app/webroot/css/mobileskeleton.css
@@ -737,6 +737,11 @@ background: url("../img/new_arrow.png") no-repeat right;
 background-color:rgba(237, 233, 233, 0.5);
 }
 
+.dropMenu-list-head select::-ms-expand {
+    display: none;
+}
+
+
 .dropMenu-list-head select option{
 background-color:none;
 font-size:18px;
@@ -1541,6 +1546,21 @@ height:30px;
 padding-top:10px;
 padding-left:15px;
 }
+
+.no-entry{
+width:100%;
+height:120px;
+text-align:center;
+color:grey;
+padding:35px;
+}
+
+
+
+
+
+
+
 
 
 
